# ImageProcessingApi

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test.ipynb
config/: requirements.txt
config/app/: api.py  apps.py  models.py  schemas.py
config/app/controllers/: image_processing.py
config/app/migrations/: 0001_initial.py  0002_remove_imageartifact_filename.py  0003_alter_imageartifact_base64_data.py
config/app/services/: compress.py  convert_channel.py  convert_format.py  draw.py  factory.py  generate_gif.py  grayscale.py  image_processing.py  perspective_transformation.py  resize.py  rotate.py
config/config/: settings.py  urls.py
