[project]
name = "imageprocessingapitask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.10",
    "django-environ>=0.12.0",
    "django-ipware>=7.0.1",
    "django-ninja>=1.5.1",
    "django-ninja-extra>=0.30.8",
    "imageio>=2.37.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pybase64>=1.4.3",
    "uuid>=1.30",
]
